--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "ts-node": "^8.3.0"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "express-winston": "^3.2.1",
+    "pg-promise": "^8.7.5",
+    "winston": "^3.2.1"
   }
 }
