--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "devDependencies": {
         "@types/express": "^4.17.0",
         "@types/node": "^12.6.8",
-        "nodemon": "^1.19.1",
-        "typescript": "^3.5.3",
-        "ts-node": "^8.3.0"
+        "nodemon": "^1.19.1"
     },
     "dependencies": {
         "dotenv": "^8.0.0",
         "express": "^4.17.1",
         "express-winston": "^3.2.1",
         "pg-promise": "^8.7.5",
+        "typescript": "^3.5.3",
+        "ts-node": "^8.3.0",
         "winston": "^3.2.1"
     }
 }
