--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "dependencies": {
         "@types/express": "^4.17.0",
         "@types/node": "^12.6.8",
+        "axios": "^0.19.0",
         "dotenv": "^8.0.0",
         "express": "^4.17.1",
         "express-winston": "^3.2.1",
         "pg-promise": "^8.7.5",
-        "typescript": "^3.5.3",
         "ts-node": "^8.3.0",
+        "typescript": "^3.5.3",
         "winston": "^3.2.1"
     }
 }
