--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
-  "compilerOptions": {
-    "sourceMap": true,
-    "target": "es5",
-    "outDir": "./dist",
-    "baseUrl": "./src"
-  },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+    "compilerOptions": {
+        "moduleResolution": "Node",
+        "sourceMap": true,
+        "target": "es5",
+        "outDir": "./dist",
+        "baseUrl": "./src"
+    },
+    "include": ["src/**/*.ts"],
+    "exclude": ["node_modules"]
 }
